Resolves: tdf#124411 default dnd to MOVE for internal and COPY for external

which what the macosx version appears to also do

Change-Id: Icff9cada2c821544d0130e28cc3e3862154a57dc